duniverse/lwt/test/ppx_expect/cases/try_1.expect
File "try_1.ml", line 3, characters 4-5:
Error: This expression has type int but an expression was expected of type
         'a Lwt.t
