duniverse/lwt/test/ppx_expect/cases/try_1.ml
let _ =
  try%lwt
    5
  with _ -> Lwt.return ();;
